objects/Membership__c.object
<CustomObject>
    <fields>
        <fullName>AM_Extraneous_Risk_Factors__c</fullName>
        <label>AM Extraneous Risk Factors</label>
        <picklist>
            <picklistValues>
                <fullName>Lack of PS/Executive engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long historic implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Distress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor - system mandate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor - tool in place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor - evaluating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turnover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future M &amp; A Target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT System Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical/Data Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined a pull forward renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Memberships</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActiveBI_Membership__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>If( Contains( Membership_Status__c , &quot;Member&quot;)  &amp;&amp;  ISPICKVAL( Program__r.Business_line__c, &quot;PT&quot;) , 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active PT Membership</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Academies_Membership__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>If( Contains( Membership_Status__c , &quot;Member&quot;)  &amp;&amp;  ISPICKVAL( Program__r.Business_line__c, &quot;TD&quot;) , 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active TD Membership</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Contract_Annual_Contract_Value__c</fullName>
        <description>Created as a part of CR-20140502-5327</description>
        <formula>Active_Contract_Idenfied__r.Annual_Contract_Value__c</formula>
        <label>Active Contract Annual Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active_Contract_End_Date__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>Active_Contract_Idenfied__r.End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Contract_Idenfied__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Contract Identified</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Memberships (Active Contract Identified)</relationshipLabel>
        <relationshipName>Memberships2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Contract_Main_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Will be auto-populate with the Main Contact of Active Contract record. Created for CR-20150205-8660.</description>
        <inlineHelpText>Auto-populated with the name of the Main Contact on the Active Contract Identified.</inlineHelpText>
        <label>Active Membership Main Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Memberships (Active Membership Main Contact)</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Contract_Negotiated_Amount__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>Active_Contract_Idenfied__r.Negotiated_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Contract Negotiated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Active_Contract_Payer_Account_Name__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>Active_Contract_Idenfied__r.Payer_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Contract Payer Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Contract_Payer_Account__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>Active_Contract_Idenfied__r.Payer_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Contract Payer Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Contract_Renewal_Opportunity_Stat__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>if( ISBLANK(Active_Contract_Idenfied__r.Renewal_Opp_Status__c), Latest_Contract__r.Renewal_Opp_Status__c,Active_Contract_Idenfied__r.Renewal_Opp_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if no active contract then returns renewal opp status of latest contract</inlineHelpText>
        <label>Active Contract Renewal Opportunity Stat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Contract_Start_Date__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>Active_Contract_Idenfied__r.Start__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Contract_Status__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>TEXT(Active_Contract_Idenfied__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Core_Membership__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>If( Contains( Membership_Status__c , &quot;Member&quot;)  &amp;&amp;  ISPICKVAL( Program__r.Business_line__c, &quot;RI&quot;) , 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active RI Membership</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_HCAB_Membership__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>IF(  CONTAINS( Account_Name__r.Active_RI_Memberships__c , &apos;HCAB&apos; ), &quot;Yes&quot;, &quot;No&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active HCAB Membership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_HWorks_Membership__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>If( Contains( Membership_Status__c , &quot;Member&quot;)  &amp;&amp;  ISPICKVAL( Program__r.Business_line__c, &quot;CM&quot;) , 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active CM Membership</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Membership_Main_Contact__c</fullName>
        <description>CR-4298</description>
        <formula>IF(ISBLANK(Active_Contract_Idenfied__r.Main_Contact__c), &quot;&quot;, HYPERLINK(&apos;/&apos; + Active_Contract_Idenfied__r.Main_Contact__c , Active_Contract_Idenfied__r.Main_Contact__r.FirstName + &quot; &quot; +  Active_Contract_Idenfied__r.Main_Contact__r.LastName, &quot;_blank&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Membership Main Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Outreach_Program__c</fullName>
        <label>Active Outreach Program</label>
        <picklist>
            <picklistValues>
                <fullName>Established Outreach Team–Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Established Outreach Team–Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Outreach Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Outreach Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Renewal_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of CR-20140502-5327.</description>
        <label>Active Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Memberships</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_to_Progs_Available_for_Outreach__c</fullName>
        <formula>IF(
AND(
Prospect_Status__c = &quot;Available For Outreach&quot;,
NOT(CONTAINS(Account_Name__r.BI_Programs_Available_for_Outreach__c+&quot;xxx&quot;, Program_Acronym__c)),
NOT(CONTAINS(Account_Name__r.Core_Programs_Available_for_Outreach__c+&quot;xxx&quot;, Program_Acronym__c)),
NOT(CONTAINS(Account_Name__r.Academy_Programs_Available_for_Outreach__c+&quot;xxx&quot;, Program_Acronym__c))
)
,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add to Progs Available for Outreach</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Marketer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Marketer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_QA_Grade__c</fullName>
        <description>Created for CR-20160114-9516.</description>
        <label>Average QA Grade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_QA_Recommend__c</fullName>
        <description>Created for CR-20160114-9516.</description>
        <label>Average QA Recommend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BA_Assignment2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto-populated via code &quot;ProjectTriggerHelper class&quot; and &quot;Test_TriggerProject class&quot; based on the Stage of the Primary Paid Project.</description>
        <inlineHelpText>This field is auto-populated based on the Stage of the Primary Paid Project. If Stage contains 0, 1, 2, 3, 4, then &quot;Implementation Business Analyst&quot; is used.  Otherwise, stage contains 5, 6, 7, 8, 9, 10, X and &quot;Production Business Analyst&quot; is used.</inlineHelpText>
        <label>BA Assignment</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Memberships2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BA_Assignment_Text__c</fullName>
        <formula>BA_Assignment2__r.FirstName  &amp; &quot; &quot; &amp; BA_Assignment2__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BA Assignment Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Text__c</fullName>
        <label>BA Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Status__c</fullName>
        <label>Batch Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMA_Current_Activated_Initiatives__c</fullName>
        <label>CMA: Current Activated Initiatives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMA_Initiative_Last_Updated__c</fullName>
        <label>CMA Initiative Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Usage__c</fullName>
        <label>CRM Usage</label>
        <picklist>
            <picklistValues>
                <fullName>CMA Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMA only after notes import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMA and Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other CRM – Considering Cutover</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Champion_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Champion Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Active_Contract_Idenfied__r.Source_Opportunity__r.CloseDate</formula>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closest_Active_Meeting_End_Date__c</fullName>
        <label>Closest Active Meeting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closest_Teleconf_End_Date__c</fullName>
        <label>Closest Teleconf End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cohort_Start_Date__c</fullName>
        <inlineHelpText>Project launch date for members who have a delay from first contract start date until implementation begins.</inlineHelpText>
        <label>Cohort Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commercial_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this member have Commercial Maintenance with PIC?</description>
        <label>Commercial Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compass_Connect__c</fullName>
        <inlineHelpText>Indicate if member has Compass Connect.</inlineHelpText>
        <label>Compass Connect</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <displayFormat>M{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Current_User_is_Owner_Associate__c</fullName>
        <formula>IF( $User.Id =  Owner_Associate__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User is Owner Associate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year_Annual_Contribution__c</fullName>
        <description>Created as a part of CR-20140502-5327.</description>
        <formula>Active_Renewal_Opportunity__r.Previous_Year_Negotiated_Credit__c</formula>
        <label>Current Year Annual Contribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DA_Assignment2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DA Assignment</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Memberships3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DA_Assignment_Text__c</fullName>
        <formula>DA_Assignment2__r.FirstName &amp; &quot; &quot; &amp; DA_Assignment2__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DA Assignment Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Recognized_ROI__c</fullName>
        <description>Created for CR-20160114-9516.</description>
        <label>Days Since Last Recognized ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Teleconference_Date__c</fullName>
        <description>Created for CR-20160114-9516.</description>
        <label>Days Since Last Teleconference Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Maker Involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decision_Type__c</fullName>
        <formula>text(Active_Contract_Idenfied__r.Source_Opportunity__r.Decision_Type__c)</formula>
        <label>Decision Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dedicated_Advisor_Pod_Lead__c</fullName>
        <formula>Primary_Project__r.Dedicator_Advisor_Pod_Lead__c</formula>
        <label>Dedicated Advisor Pod Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Contacts__c</fullName>
        <label>Delivery Contacts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delivery_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Memberships (Delivery Manager)</relationshipLabel>
        <relationshipName>Memberships4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Project_Phase__c</fullName>
        <label>Delivery  Project Phase</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Earliest_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Earliest Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Earliest Contract</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eligible__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_on_Last_Contract__c</fullName>
        <description>CR-3485-This field is used in an integration with Eloqua. Please research with the appropriate stakeholders/liaisons before altering it&apos;s meaning, usage, field type or other field characteristics. Do not delete or change the current API name.</description>
        <formula>Latest_Contract__r.End__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <formula>Active_Contract_Idenfied__r.Source_Opportunity__r.End__c</formula>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Engagement_Grade__c</fullName>
        <label>Executive Engagement Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor_Current_Through__c</fullName>
        <description>Created for CR-20160114-9516.</description>
        <label>Executive Sponsor Current Through</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20160114-9516.</description>
        <label>Executive Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Memberships (Executive Sponsor)</relationshipLabel>
        <relationshipName>Memberships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flag_AdvcomLogin_POC_Last12Months__c</fullName>
        <label>Red Flag: POC Advcom Login Last 12 Month</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_AdvcomLogin_POC_Last3Months__c</fullName>
        <label>Red Flag: POC Adv.com Login Last 3 Month</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_AdvcomPgView_AvgMo_Inst__c</fullName>
        <label>Red Flag: Avg Month Adv.com PgView Inst</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_AdvcomPgView_AvgMo_POC__c</fullName>
        <label>Red Flag: Avg Month Adv.com PgView POC</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_AdvcomUsers_Payer__c</fullName>
        <label>Red Flag: Advisory.com Users from Payer</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_DAG_AvgMo__c</fullName>
        <label>Red Flag: Avg Month DAG Tool Payer Util</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_ExpertCenter_CXO__c</fullName>
        <label>Red Flag: CXO Expert Center Requests</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_MtgRoundtable_CEO__c</fullName>
        <label>Red Flag: Payer CEO Attend to CEO Rndtbl</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_Mtg_POC__c</fullName>
        <label>Red Flag: Prog Meeting Attendance by POC</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_Mtg_Payer__c</fullName>
        <label>Red Flag: Payer Attendees to Meetings</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_Number_of_Red_Flags__c</fullName>
        <label>Red Flag: Number of Red Flags</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_OI_Custom__c</fullName>
        <label>Red Flag: No of OI Custom Reports</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_Onsite_Payer__c</fullName>
        <label>Red Flag: Number of Onsites from Payer</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_PubReorders__c</fullName>
        <label>Red Flag: Number of Publication Reorders</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_QA_Last12Months__c</fullName>
        <label>Red Flag: QA in Last 12 Months</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_QA_WouldRecommend__c</fullName>
        <label>Red Flag: QA Likelihood to Recommend</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_ROI__c</fullName>
        <label>Red Flag: ROI (Ever)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_Teleconf_All__c</fullName>
        <label>Red Flag: Attendees to Teleconf</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_Teleconf_Payer__c</fullName>
        <label>Red Flag: Payer Attendees to Teleconf</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_UtilizationAvgLogins_Last6Months__c</fullName>
        <label>Red Flag: Util Avg Login Last 6 Month</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <formula>&quot;A0020000-0000-0000-0000-0000&quot; &amp; RIGHT(Counter_ID__c,8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goals_and_Work_Plan_Call_Actual__c</fullName>
        <label>Goals and Work Plan Call (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goals_and_Work_Plan_Call_Projected__c</fullName>
        <label>Goals and Work Plan Call (Projected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GradesFirst_Card_Readers__c</fullName>
        <description>Created for CR-20150413-8865</description>
        <label>GradesFirst: Card Readers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GradesFirst_Licenses__c</fullName>
        <description>Created for CR-20150413-8865</description>
        <label>GradesFirst: Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GradesFirst_Text_Messages__c</fullName>
        <description>Created for CR-20150413-8865</description>
        <label>GradesFirst: Text Messages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HW_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CM Lead</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Memberships (HW Lead)</relationshipLabel>
        <relationshipName>Memberships2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HW_Secondary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CM Secondary</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Memberships (HW Secondary)</relationshipLabel>
        <relationshipName>Memberships3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Historical_Linker__c</fullName>
        <label>Historical Linker</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Pod__c</fullName>
        <label>Implementation Pod</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Status__c</fullName>
        <label>Implementation Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Member__c</fullName>
        <description>Will be marked as true for &quot;Industry Member&quot;. Created for CR-20141211-8303</description>
        <formula>Program__r.Industry_Member_for_Meetings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Opp_Assessment_Actual__c</fullName>
        <label>Initial Opp Assessment (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Opp_Assessment_Target__c</fullName>
        <label>Initial Opp Assessment (Target)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Value_Meeting_Actual__c</fullName>
        <label>Initial Value Meeting (Actual)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Value_Meeting_Projected__c</fullName>
        <label>Initial Value Meeting (Projected)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Visit_this_Calendar_Year__c</fullName>
        <formula>IF(YEAR( Most_Recent_NBB_Visit__c)  = Year(Today()), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Visit this Calendar Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiatives_Series_1__c</fullName>
        <label>Initiatives Series 1</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InstitutionSolutionFlag__c</fullName>
        <description>Created for CR-20150908-9224</description>
        <formula>Account_Name__r.Solution_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institution Solutions Flag</label>
        <type>Text</type>
    </fields>
</CustomObject>